--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "emotion-normalize": "^11.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
