--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "redux-persist": "^6.0.0",
